# primitiveValues

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example.cpp
include/mylib/: mylib.h
include/primitivevalue/: primitivevalue.h
src/: mylib.cpp  primitivevalue.cpp
tests/: CMakeLists.txt  test_basic.cpp
